[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/background.png" type="Texture" id=1]
[ext_resource path="res://assets/objects/shelf.png" type="Texture" id=2]
[ext_resource path="res://assets/objects/lamp.png" type="Texture" id=3]
[ext_resource path="res://assets/objects/clock.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/AldotheApache.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://cursor.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/objects/carpet.png" type="Texture" id=7]
[ext_resource path="res://shaders/blur.shader" type="Shader" id=8]
[ext_resource path="res://assets/ui/buttons/play.png" type="Texture" id=9]
[ext_resource path="res://assets/ui/buttons/play_pressed.png" type="Texture" id=10]
[ext_resource path="res://assets/ui/buttons/exit.png" type="Texture" id=11]
[ext_resource path="res://assets/ui/buttons/settings_pressed.png" type="Texture" id=12]
[ext_resource path="res://assets/ui/buttons/settings.png" type="Texture" id=13]
[ext_resource path="res://screens/main_menu.gd" type="Script" id=14]
[ext_resource path="res://assets/ui/buttons/exit_pressed.png" type="Texture" id=15]

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 8 )
shader_param/amount = 2.2

[sub_resource type="GradientTexture" id=1]
width = 1080

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 76
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=5]
resource_name = "blur"
length = 8.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("shader:material:shader_param/amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4, 6, 8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 2.2, 1.0, 2.2, 1.0, 2.2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("v_split_container/control/v_split_container:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6, 7, 8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 13.8591, -10.0794 ), Vector2( -37.7976, 40.3175 ), Vector2( 80.635, 41.5774 ), Vector2( 0, 0 ), Vector2( -57.9564, -7.55951 ), Vector2( 60.4762, -6.29959 ), Vector2( -16.3791, 27.7183 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("v_split_container/control/v_split_container:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6, 8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.95, 0.95 ), Vector2( 1, 1 ), Vector2( 0.95, 0.95 ), Vector2( 1, 1 ), Vector2( 0.95, 0.95 ), Vector2( 0.975, 0.975 ), Vector2( 1, 1 ) ]
}

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="decoration" type="Node2D" parent="."]

[node name="background" type="Sprite" parent="decoration"]
position = Vector2( 539.807, 366.271 )
scale = Vector2( 0.692, 0.684 )
texture = ExtResource( 1 )

[node name="clock" type="Sprite" parent="decoration"]
position = Vector2( 158, 86 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )

[node name="shelf" type="Sprite" parent="decoration"]
position = Vector2( 172.719, 370.686 )
scale = Vector2( 0.465, 0.465 )
texture = ExtResource( 2 )

[node name="carpet" type="Sprite" parent="decoration"]
position = Vector2( 701.886, 645.349 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 7 )

[node name="lamp" type="Sprite" parent="decoration"]
position = Vector2( 636.37, 30.5074 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 3 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shader" type="TextureRect" parent="UI"]
material = SubResource( 4 )
margin_right = 1080.0
margin_bottom = 720.0
size_flags_horizontal = 2
size_flags_vertical = 2
texture = SubResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="note" type="Label" parent="UI"]
modulate = Color( 0.807843, 0.807843, 0.807843, 1 )
margin_left = 6.0
margin_top = 576.0
margin_right = 610.0
margin_bottom = 1068.0
custom_fonts/font = SubResource( 3 )
text = "Developer Notes:

The game contains a few bugs and is not entirely completed.
We focused on implementing most of what we thought about and therefore didn't have the time to implemenent a save system, so if you quit the game you'll lose your progres."
align = 3
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="v_split_container" type="VSplitContainer" parent="UI"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 369.783
margin_top = -195.46
margin_right = -173.217
margin_bottom = 110.54
__meta__ = {
"_edit_use_anchors_": false
}

[node name="control" type="Control" parent="UI/v_split_container"]
margin_right = 537.0

[node name="v_split_container" type="VSplitContainer" parent="UI/v_split_container/control"]
anchor_right = 1.0
margin_bottom = 101.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="UI/v_split_container/control/v_split_container"]
modulate = Color( 0.521569, 0.309804, 0.309804, 1 )
margin_right = 537.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 2 )
text = "IlMank"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label2" type="Label" parent="UI/v_split_container/control/v_split_container"]
modulate = Color( 0.258824, 0.235294, 0.235294, 1 )
margin_top = 78.0
margin_right = 537.0
margin_bottom = 99.0
custom_fonts/font = SubResource( 3 )
text = "SOMETHING's MISSING"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttons" type="Control" parent="UI/v_split_container"]
margin_top = 12.0
margin_right = 537.0
margin_bottom = 306.0

[node name="play" type="TextureButton" parent="UI/v_split_container/buttons"]
margin_left = 210.407
margin_top = 144.891
margin_right = 466.407
margin_bottom = 400.891
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="settings" type="TextureButton" parent="UI/v_split_container/buttons"]
margin_left = 119.693
margin_top = 254.504
margin_right = 375.693
margin_bottom = 510.504
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="leave" type="TextureButton" parent="UI/v_split_container/buttons"]
margin_left = 289.782
margin_top = 250.724
margin_right = 545.782
margin_bottom = 506.724
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background_animator" type="AnimationPlayer" parent="UI"]
playback_speed = 0.2
anims/blur = SubResource( 5 )

[node name="Cursor" parent="." instance=ExtResource( 6 )]
[connection signal="pressed" from="UI/v_split_container/buttons/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="UI/v_split_container/buttons/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="UI/v_split_container/buttons/leave" to="." method="_on_leave_pressed"]
